--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,61 @@
-.App {
+
+
+h1{
+  background-color:#233237;
+  color:#d9d9d9;
+  padding: 45px;
   text-align: center;
+  font-family: monospace;
+  font-size: 48px;
+  
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+p{
+  color: #18121e;
+  margin: auto;
+  text-align: center;
+  font-size: 20px;
+  font-style: normal;
+  padding: 15px;
+  
+  
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+h2{
+  color: #18121e;
+  text-align: center;
+  font-family: monospace;
+  font-size: 30px;
+}
+.button {
+  padding: 15px;
+  
+  margin: auto;
+  margin-left: 10px;
+  background-color: #984b43;
+  border: none;
   color: white;
+  border-radius: 12px;
+  
 }
 
-.App-link {
-  color: #61dafb;
+.button:hover{
+  background-color: white;
+  border: 1.5px solid #984b43;
+  color: black;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.anecdote{
+  border-top: 2px solid #eac37a;
+  margin-top: 25px; 
+  margin-bottom: 25px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 60%;
+  outline: 2px dotted #eac37a;
+  outline-offset: 15px;
+  text-align: center;
+  
+}
+.anecdoteText{
+  font-size: 36px;
+  font-style:italic;
+  padding: 25px;
 }
